# Event-Driven-Data-Processing

./: .gitignore  README.md  app-request.py  data.json  main.py  pyproject.toml  setup.sh  terraform.tfstate
app/: .env  app-request-s3-ingest.py  app-request.py  main.py  requirements.txt
infra/: compress.sh  iam.tf  main.tf  outputs.tf  resources.tf
infra/lambda/: lambda.py
terraform/: buckets.tf  iam.tf  main.tf  resources.tf  terraform.tfstate.backup  vars.tf
