[tool.poetry]
name = "event-driven-data-processing"
version = "0.1.0"
description = ""
authors = ["gabriel-barata"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.27"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
